crates/carta/tests/snapshots/golden_e2e__jira__latex__panel.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\textbf{Notice}

Body text inside the panel.
