crates/carta/tests/snapshots/golden_e2e__jira__latex__paragraphs.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
First paragraph spanning\\
two source lines.

Second paragraph after a blank line.

A forced\\
break here.
