crates/carta/tests/snapshots/golden_e2e__jira__latex__quote.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{quote}
A single quoted line.
\end{quote}

\begin{quote}
A quoted paragraph inside a block.
\end{quote}
