crates/carta/tests/snapshots/golden_e2e__jira__latex__rule.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
Above the rule.

\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}

Below the rule.
