crates/carta/tests/snapshots/golden_e2e__jira__latex__smart-dashes.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
Spaced -- en and --- em dashes appear mid-line.

A word hugging three word-\/-- folds to a hyphen and en dash.

A word hugging four word-\/--- folds to a hyphen and em dash.

Two hyphens word-\/- stay literal before a space.

A trailing run sits at the very end -\/-
