crates/carta/tests/snapshots/golden_e2e__jira__latex__spans.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
An \protect\phantomsection\label{target}{} anchor marks a spot.

Text continues after the anchor span.
