crates/carta/tests/snapshots/golden_e2e__jira__latex__symbols.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
Symbols 👍 and ❌ and ❗ here.

Ranges 1-\/-2 and an em --- dash.

A --- \emph{quoted citation} line.
