crates/carta/tests/snapshots/golden_e2e__jira__latex__table-cell-blocks.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}
  >{\raggedright\arraybackslash}p{(\linewidth - 2\tabcolsep) * \real{0.5000}}
  >{\raggedright\arraybackslash}p{(\linewidth - 2\tabcolsep) * \real{0.5000}}@{}}
\toprule\noalign{}
List cell & Quote cell \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
\begin{itemize}
\item
  one
\end{itemize} & \begin{quote}
q
\end{quote} \\
h1. plain & a

\begin{quote}
q
\end{quote}

b \\
\end{longtable}
}
