crates/carta/tests/snapshots/golden_e2e__jira__latex__table.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
Name & Role \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
Ada & Engineer \\
Grace & Admiral \\
\end{longtable}
}
