crates/carta/tests/snapshots/golden_e2e__jira__latex__trailing-break.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A trailing forced break is dropped

Middle\\
break is kept
